2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO
	* queue.man: in Tcl 8.6+. This is TclOO v1 (major version change).
	* queue.tcl: Now accepting 0.6.1+ and 1+. Versions bumped to
	* queue_oo.tcl: 1.4.4 and 1.5.3 respectively.
	* stack.man:
	* stack.tcl:
	* stack_oo.tcl:

2012-12-07  Andreas Kupries  <andreask@activestate.com>

	* list.tcl: [Bug 3593689]. Applied patch by Donal Fellows fixing
	* list.test: a busyloop in [nextperm] due to use of the wrong
	* pkgIndex.tcl: comparison operator. Bumped version to 1.8.2.
	* struct_list.man: Added test for this.

2012-11-21  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO.
	* queue.man: Load check accepts anything, code restricts to 0.6.1.
	* queue.tcl: Now both restrict to 0.6.1+. Versions bumped to
	* stack.man: 1.4.3 and 1.5.2 respectively.
	* stack.tcl:

2012-07-09  Andreas Kupries  <andreask@activestate.com>

	* tree/m.c (tm_ATTR): Fixed non-static string array used in call
	  of Tcl_GetIndexFromObj(). Memory smash waiting to happen. Thanks
	  to Brian Griffin for alerting us all to the problem.

2012-06-22  Andreas Kupries  <andreask@activestate.com>

	* queue.man: [Bug 3537006] Fixed typos.

2012-01-08  Andreas Kupries  <andreask@activestate.com>

	* struct_tree.man: [Bug 3471182] Fixed typo.
	* struct_tree1.man:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-09-17  Michael Schlenker <mic42@users.sourceforge.ner>

	* list.tcl: [Bug 3308051]: Fixed noncommutative equal check
	* list.test:

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-10-26  Andreas Kupries  <andreask@activestate.com>

	* graphops.man: [Bug 3090738]: Fixed typo in command names.
